<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kARTography</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_set_poilocation">SetPOILocationActivity</string>
    <string name="hintTitle">Title: Leave blank if unknown.</string>
    <string name="hintLocation">Location</string>
    <string name="hintAuthor">Artist: Leave blank if unknown.</string>
    <string name="hintDescription">Description: Theres a lot of art out there. Be verbose!</string>
    <string name="submitPhoto">Submit</string>
    <string name="photo">Photo</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgotLogin">Forgot Username or Password?</string>
    <string name="newAccount">Create New Account</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="createAccount">Create</string>
    <string name="title_activity_poi_detail">PoiDetailActivity</string>
    <string name="confirmFlag">This image will be put under review and be removed for the time being.  Are you sure you wish to flag this image?</string>
    <string name="flag">Flag</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_display_detailed_photo">DisplayDetailedPhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="uploader">uploader</string>
    <string name="uploadDate">uploaded on...</string>
    <string name="location">Location</string>
    <string name="locationText">Whatever the magic is</string>
    <string name="artist">Artist</string>
    <string name="description">Description</string>
    <string name="title_photo">Title</string>
    <string name="title_activity_login_home">LoginHomeActivity</string>
    <string name="createAccountCaps">CREATE ACCOUNT</string>
    <string name="createAccountLowercase">Create Account</string>
    <string name="loginLowercase">Login</string>
    <string name="tap_to">TAP TO TAKE PHOTO</string>
    <string name="missionStatement">Mapping the World through Art...</string>

</resources>
