<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewUserActivity" >

    <EditText
        android:id="@+id/etCreateUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/enterUsername" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etEnterEmail"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etCreateUsername"
        android:ems="10"
        android:hint="@string/enterEmail" />

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etEnterEmail"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etReEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etEnterPassword"
        android:ems="10"
        android:hint="@string/reenterpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etReEnterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onCreateUser"
        android:text="@string/createAccount" />

</RelativeLayout>
