<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewUserActivity" >

    <EditText
        android:id="@+id/etCreateUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:background="@drawable/greendialog_edit_text_holo_light"
        android:hint="@string/enterUsername" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etCreateUsername"
        android:ems="10"
        android:background="@drawable/greendialog_edit_text_holo_light"
        android:hint="@string/enterPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginAccount"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/etEnterPassword"
        android:layout_below="@+id/etEnterPassword"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="22dp"
        android:onClick="onCreateUser"
        android:background="@drawable/selector_nice_button"
        android:textColor="#FFF"
        android:text="@string/loginLowercase" />

    <Button
        android:id="@+id/btnLoginCancel"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/btnLoginAccount"
        android:layout_alignRight="@+id/etEnterPassword"
        android:layout_marginRight="50dp"
        android:background="@drawable/selector_nice_button"
        android:textColor="#FFF"
        android:text="@string/cancel" />

</RelativeLayout>
