<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakePhotoActivity" 
    android:background="#efefef"
    >
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	     >

    <LinearLayout
        android:id="@+id/ll_takePhoto"
        android:layout_width="match_parent"
        android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout 
            android:layout_width="match_parent"
            android:paddingTop="23dp"
            android:paddingLeft="18dp"
            android:paddingRight="21dp"
            android:background="@drawable/poloroid_blank"
	        android:layout_height="wrap_content">

	        <ImageView
	            android:id="@+id/iv_Photo"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dp"
	            android:background="#000000"
	            android:onClick="onTakePicture"
	            android:src="@drawable/poloroid_space" />

				<!-- android:layout_margin="8dp" -->
	        <TextView
	            android:id="@+id/tv_Photo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:layout_alignTop="@+id/iv_Photo"
	            android:layout_centerHorizontal="true"
	            android:text="@string/tap_to"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
		</RelativeLayout>
		
        <EditText
            android:id="@+id/et_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            
            android:ems="10"
            android:hint="@string/hintTitle" >

            
        </EditText>
        
        <EditText
            android:id="@+id/et_author"
            android:layout_width="250dp"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            
            android:singleLine="true"
            android:minLines="2"
            android:ems="10"
            android:hint="@string/hintAuthor" >


        </EditText>
        
        <EditText
            android:id="@+id/et_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/hintDescription" >

            
        </EditText>

        <Button
            android:id="@+id/btn_submitPhoto"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_nice_button"
            android:layout_gravity="center_horizontal"
            android:onClick="onSavePOI"
            android:text="@string/submitPhoto"
            android:textColor="#FFF" />

    <ProgressBar
        android:id="@+id/pbLoading"
  		android:visibility="invisible"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true" />
 </LinearLayout>
 </ScrollView>
</RelativeLayout>
